# insider_scanner

./: CLAUDE.md  CLAUDE_GUIDE.md  PROJECT_SUMMARY.md  Polymarket_Earnings_GroundTruth_Logger_PRP.md  QUICKSTART.md  README.md  example_usage.py  polymarket_holder_edge_prp.md  polymarketfetch.py
insider_finder/: PROJECT_SUMMARY.md  README.md  TESTING_GUIDE.md  config.yaml  pyproject.toml
insider_finder/edge_scan/: __init__.py  __main__.py  cli.py  config.py  export.py  features.py  models.py  scoring.py  utils.py
insider_finder/edge_scan/fetchers/: __init__.py  clob.py  data_api.py  gamma.py  subgraph.py
insider_finder/output/: holders.csv  holders.json  report.md  run_meta.json
insider_finder/tests/: __init__.py
